@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<definitions xmlns="http://schemas.xmlsoap.org/wsdl/" xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/" xmlns:tns="http://localhost/69668.php?a=a&amp;b=b" xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:soap-enc="http://schemas.xmlsoap.org/soap/encoding/" xmlns:soap12="http://schemas.xmlsoap.org/wsdl/soap12/" name="TestService" targetNamespace="http://localhost/69668.php?a=a&amp;b=b">
+    <types>
+        <xsd:schema targetNamespace="http://localhost/69668.php?a=a&amp;b=b" />
+    </types>
+    <portType name="TestServicePort">
+        <operation name="test">
+            <documentation>test</documentation>
+            <input message="tns:testIn" />
+            <output message="tns:testOut" />
+        </operation>
+    </portType>
+    <binding name="TestServiceBinding" type="tns:TestServicePort">
+        <soap:binding style="rpc" transport="http://schemas.xmlsoap.org/soap/http" />
+        <operation name="test">
+            <soap:operation soapAction="http://localhost/69668.php?a=a&amp;b=b#test" />
+            <input>
+                <soap:body use="encoded" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/" namespace="http://localhost/69668.php?a=a&amp;b=b" />
+            </input>
+            <output>
+                <soap:body use="encoded" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/" namespace="http://localhost/69668.php?a=a&amp;b=b" />
+            </output>
+        </operation>
+    </binding>
+    <service name="TestServiceService">
+        <port name="TestServicePort" binding="tns:TestServiceBinding">
+            <soap:address location="http://localhost/69668.php?a=a&amp;b=b" />
+        </port>
+    </service>
+    <message name="testIn" />
+    <message name="testOut">
+        <part name="return" type="xsd:string" />
+    </message>
+</definitions>
